Fix Chips Story

--- a/src/components/TextField/__stories__/TextField.stories.mdx
+++ b/src/components/TextField/__stories__/TextField.stories.mdx
@@ -20,9 +20,9 @@ export const metaSettings = createStoryMetaSettings({
 
 <Meta
   title="Inputs/TextField"
-  component={ TextField }
-  argTypes={ metaSettings.argTypes }
-  decorators={ metaSettings.decorators }
+  component={TextField}
+  argTypes={metaSettings.argTypes}
+  decorators={metaSettings.decorators}
 />
 
 <!--- Component template -->
@@ -32,6 +32,7 @@ export const textFieldTemplate = createComponentTemplate(TextField);
 <!--- Component documentation -->
 
 # TextField
+
 - [Overview](#overview)
 - [Props](#props)
 - [Usage](#usage)
@@ -42,28 +43,45 @@ export const textFieldTemplate = createComponentTemplate(TextField);
 - [Feedback](#feedback)
 
 ## Overview
+
 An input field includes a label and a text field users can type text into. They typically appear in forms and dialogs.
 
 <Canvas>
-  <Story name="Overview"
-         args={{ title: "Name", iconName: Show, validation: {text: "Helper text"}, wrapperClassName: "monday-storybook-text-field_size", showCharCount: true, placeholder: "Placeholder text here" }}>
-    { textFieldTemplate.bind({}) }
+  <Story
+    name="Overview"
+    args={{
+      title: "Name",
+      iconName: Show,
+      validation: { text: "Helper text" },
+      wrapperClassName: "monday-storybook-text-field_size",
+      showCharCount: true,
+      placeholder: "Placeholder text here"
+    }}
+  >
+    {textFieldTemplate.bind({})}
   </Story>
 </Canvas>
 
 ## Props
+
 <ArgsTable story="Overview" />
 
 ## Usage
-<UsageGuidelines guidelines={[
-  "Always use placeholder in input field",
-  "Icons can be used to message alerts as well. Pair them with error messages to provide redundant alerts.",
-  "Character or word counters should be used if there is a character or word limit.",
-]}/>
+
+<UsageGuidelines
+  guidelines={[
+    "Always use placeholder in input field",
+    "Icons can be used to message alerts as well. Pair them with error messages to provide redundant alerts.",
+    "Character or word counters should be used if there is a character or word limit."
+  ]}
+/>
 
 ## Variants
+
 ### Sizes
+
 There are three sizes available: Small (32px), Medium (40px) and Large (48px).
+
 <Canvas>
   <Story name="Sizes">
     <div className="monday-storybook-text-field_column-wrapper">
@@ -75,6 +93,7 @@ There are three sizes available: Small (32px), Medium (40px) and Large (48px).
 </Canvas>
 
 ### States
+
 <Canvas>
   <Story name="States">
     <div className="monday-storybook-text-field_wrapper">
@@ -84,80 +103,118 @@ There are three sizes available: Small (32px), Medium (40px) and Large (48px).
       </div>
       <div className="monday-storybook-text-field_column-wrapper">
         <TextField placeholder="With field label" title="Name" size={TextField.sizes.MEDIUM} />
-        <TextField placeholder="Success" validation={{ status: "success" }} iconName={Check} size={TextField.sizes.MEDIUM} />
-        <TextField placeholder="Error" validation={{ status: "error" }} iconName={CloseSmall} size={TextField.sizes.MEDIUM} />
+        <TextField
+          placeholder="Success"
+          validation={{ status: "success" }}
+          iconName={Check}
+          size={TextField.sizes.MEDIUM}
+        />
+        <TextField
+          placeholder="Error"
+          validation={{ status: "error" }}
+          iconName={CloseSmall}
+          size={TextField.sizes.MEDIUM}
+        />
       </div>
     </div>
   </Story>
 </Canvas>
 
+### Validation
+
+Use validation to give feedback to the user for a case where he has provided an invalid input. The validation error should appear when the user is done typing and getting out of the input’s focus.
+
+<code>The validation object has two status states - error, success</code>
+
+<Canvas>
+  <Story name="Validation">
+    <div className="monday-storybook-text-field_column-wrapper">
+      <TextField
+        placeholder="Validate me"
+        title="Name"
+        size={TextField.sizes.MEDIUM}
+        validation={{ status: "error", text: "Validation text" }}
+      />
+    </div>
+  </Story>
+</Canvas>
+
 ## Do’s and Don’ts
+
 <ComponentRules
   rules={[
     {
       positive: {
-        component:
+        component: (
           <div className="monday-storybook-text-field_size">
             <TextField title="Email" placeholder="email@monday.com" size={TextField.sizes.MEDIUM} />
-          </div>,
-        description: "Make sure your text field has a short, descriptive label above it that describes what the user should type into the box below."
+          </div>
+        ),
+        description:
+          "Make sure your text field has a short, descriptive label above it that describes what the user should type into the box below."
       },
       negative: {
-        component:
+        component: (
           <div className="monday-storybook-text-field_size">
-            <TextField title="What is your email address?" placeholder="email@monday.com" size={TextField.sizes.MEDIUM} />
-          </div>,
-        description: "Avoid phrasing your labels as questions. Keep in mind that your label shouldn’t contain instructions. Reserve those for the helper text."
+            <TextField
+              title="What is your email address?"
+              placeholder="email@monday.com"
+              size={TextField.sizes.MEDIUM}
+            />
+          </div>
+        ),
+        description:
+          "Avoid phrasing your labels as questions. Keep in mind that your label shouldn’t contain instructions. Reserve those for the helper text."
       }
     },
     {
       positive: {
-        component:
+        component: (
           <div className="monday-storybook-text-field_size">
             <TextField title="Email" placeholder="email@monday.com" size={TextField.sizes.MEDIUM} />
-          </div>,
-        description: "Use the help text description to convey requirements or to show any formatting examples that would help user comprehension."
+          </div>
+        ),
+        description:
+          "Use the help text description to convey requirements or to show any formatting examples that would help user comprehension."
       },
       negative: {
-        component:
+        component: (
           <div className="monday-storybook-text-field_size">
             <TextField title="Email" placeholder="email@monday.com" size={TextField.sizes.MEDIUM} />
             For example: email@monday.com
-          </div>,
-        description: "Avoid repeating the field label. If the field label provides sufficient context for completing the action, then you likely don’t need to add help text."
+          </div>
+        ),
+        description:
+          "Avoid repeating the field label. If the field label provides sufficient context for completing the action, then you likely don’t need to add help text."
       }
     }
   ]}
 />
 
 ## Use cases and examples
+
 ### Text field in a form
+
 Users can insert text.
+
 <Canvas>
   <Story name="Text field in a form">
     <div className="monday-storybook-text-field_box">
       <h1>Dark Mode Feedback From</h1>
       <div className="monday-storybook-text-field_box_wrapper">
-      <TextField 
-        title="Your Name" 
-        size={TextField.sizes.MEDIUM}
-        placeholder="John Doe"
-      />
-      <TextField 
-        title="Email" 
-        size={TextField.sizes.MEDIUM}
-        placeholder="email@monday.com"
-      />
+        <TextField title="Your Name" size={TextField.sizes.MEDIUM} placeholder="John Doe" />
+        <TextField title="Email" size={TextField.sizes.MEDIUM} placeholder="email@monday.com" />
       </div>
     </div>
   </Story>
 </Canvas>
 
 ### Input field with placeholder text
+
 <Canvas>
   <Story name="Input field with placeholder text">
     <div className="monday-storybook-text-field_size">
-      <TextField 
+      <TextField
         title="Invite with email"
         labelIconName={Email}
         placeholder="Enter one or more email"
@@ -167,30 +224,26 @@ Users can insert text.
   </Story>
 </Canvas>
 
-
 ### Input field with date
+
 <Canvas>
   <Story name="Input field with date">
     <div className="monday-storybook-text-field_size">
-      <TextField
-        size={TextField.sizes.MEDIUM}
-        type={TextFieldTextType.DATE}
-      />
+      <TextField size={TextField.sizes.MEDIUM} type={TextFieldTextType.DATE} />
     </div>
   </Story>
 </Canvas>
 
 ### Input field with datetime
+
 <Canvas>
   <Story name="Input field with date and time">
     <div className="monday-storybook-text-field_size">
-      <TextField
-        size={TextField.sizes.MEDIUM}
-        type={TextFieldTextType.DATE_TIME}
-      />
+      <TextField size={TextField.sizes.MEDIUM} type={TextFieldTextType.DATE_TIME} />
     </div>
   </Story>
 </Canvas>
 
 ## Related components
+
 <RelatedComponents componentsNames={[DROPDOWN, SEARCH, COMBOBOX]} />
