--- a/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
@@ -153,7 +153,7 @@ There are four types of attention boxes: Primary, success, danger, and dark (nat
                         justify={Flex.justify.SPACE_BETWEEN}
                         gap={Flex.gaps.XS}>
                         Get your monday.com notifications
-                        <AttentionBoxLink href="" text="Learn More"/>
+                        <AttentionBoxLink href="" text="Learn more"/>
                     </Flex>
                 </AttentionBox>);
         }}
@@ -218,7 +218,7 @@ There are four types of attention boxes: Primary, success, danger, and dark (nat
                     compact
                     icon={Info}
                 >
-                    <Flex style={{width: "100%"}} justify={Flex.justify.SPACE_BETWEEN}>Get your monday.com notifications <AttentionBoxLink href="" text="Learn More"/></Flex>
+                    <Flex style={{width: "100%"}} justify={Flex.justify.SPACE_BETWEEN}>Get your monday.com notifications <AttentionBoxLink href="" text="Learn more"/></Flex>
                 </AttentionBox>
           </div>
         ),
@@ -235,7 +235,7 @@ There are four types of attention boxes: Primary, success, danger, and dark (nat
                   className="monday-storybook-attention-box_att-box"
                   icon={Info}
               >
-                  <Flex style={{width: "100%"}} justify={Flex.justify.SPACE_BETWEEN}>7 days left on your free trial <AttentionBoxLink href="" text="Learn More"/></Flex>
+                  <Flex style={{width: "100%"}} justify={Flex.justify.SPACE_BETWEEN}>7 days left on your free trial <AttentionBoxLink href="" text="Learn more"/></Flex>
               </AttentionBox>
           </div>
         ),
