add attentionbox link props to sub components

--- a/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
@@ -29,7 +29,8 @@ export const metaSettings = createStoryMetaSettings({
 <Meta
   title="Feedback/AttentionBox"
   component={AttentionBox}
-  argTypes={metaSettings.argTypes}
+  subcomponents={AttentionBoxLink}
+argTypes={metaSettings.argTypes}
   decorators={metaSettings.decorators}
 />
 
