--- a/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
@@ -29,8 +29,8 @@ export const metaSettings = createStoryMetaSettings({
 <Meta
   title="Feedback/AttentionBox"
   component={AttentionBox}
-  subcomponents={AttentionBoxLink}
-argTypes={metaSettings.argTypes}
+  subcomponents={{AttentionBoxLink}}
+  argTypes={metaSettings.argTypes}
   decorators={metaSettings.decorators}
 />
 
