--- a/src/components/Heading/__stories__/Heading.stories.mdx
+++ b/src/components/Heading/__stories__/Heading.stories.mdx
@@ -77,8 +77,8 @@ Heading components are used to title any page sections or sub-sections in top-le
 <Canvas>
   <Story name="Sizes">
     <div style={{ display: "flex", flexDirection: "column" }}>
-      <Heading type={Heading.types.h1} value="Hello H1" brandFont/>
-      <Heading type={Heading.types.h1} value="Hello H1 medium" size="medium" brandFont />
+      <Heading type={Heading.types.h1} value="Hello H1" />
+      <Heading type={Heading.types.h1} value="Hello H1 medium" size="medium" />
       <Heading type={Heading.types.h2} value="Hello H2" />
       <Heading type={Heading.types.h2} value="Hello H2 small" size="small" />
       <Heading type={Heading.types.h3} value="Hello H3" />
