--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -156,8 +156,7 @@ e.g.
 
 ### Chips on colored backgrounds
 
-The chips have a prop which adds a border to them, this should be used when the chip is being displayed on a colored background
-
+When a chip appears on a background color identical to its color, use `showBorder` prop in order to add a distinctive white border.
 <Canvas>
   <Story name="On color">
     <Flex style={{ width: "100%", height: 300 }} align={Flex.align.STRETCH} justify={Flex.justify.CENTER}>
@@ -166,52 +165,39 @@ The chips have a prop which adds a border to them, this should be used when the 
         justify={Flex.justify.CENTER}
         style={{
           background: "var(--primary-selected-color)",
-          width: "24%",
+          width: "124px",
           height: "64px",
           margin: "var(--spacing-small)",
           borderRadius: "var(--border-radius-small)"
         }}
       >
-        <Chips label="On selected" showBorder />
+        <Chips label="On selected" showBorder readOnly/>
       </Flex>
       <Flex
         align={Flex.align.CENTER}
         justify={Flex.justify.CENTER}
         style={{
           background: "var(--positive-color-selected)",
-          width: "24%",
+          width: "124px",
           height: "64px",
           margin: "var(--spacing-small)",
           borderRadius: "var(--border-radius-small)"
         }}
       >
-        <Chips label="On positive" showBorder color={Chips.colors.POSITIVE} />
+        <Chips label="On positive" showBorder color={Chips.colors.POSITIVE} readOnly />
       </Flex>
       <Flex
         align={Flex.align.CENTER}
         justify={Flex.justify.CENTER}
         style={{
           background: "var(--negative-color-selected)",
-          width: "24%",
+          width: "124px",
           height: "64px",
           margin: "var(--spacing-small)",
           borderRadius: "var(--border-radius-small)"
         }}
       >
-        <Chips label="On negative" showBorder color={Chips.colors.NEGATIVE} />
-      </Flex>
-      <Flex
-        align={Flex.align.CENTER}
-        justify={Flex.justify.CENTER}
-        style={{
-          background: "var(--color-blackish)",
-          width: "24%",
-          height: "64px",
-          margin: "var(--spacing-small)",
-          borderRadius: "var(--border-radius-small)"
-        }}
-      >
-        <Chips label="On black" showBorder />
+        <Chips label="On negative" showBorder color={Chips.colors.NEGATIVE} readOnly />
       </Flex>
     </Flex>
   </Story>
