--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -132,7 +132,11 @@ Chips are compact elements that represent an input, attribute, or action. They m
 ### Color coded chips
 
 Use chips with colors to indicate different categories.
-e.g. `<Chips label="GRASS_GREEN" color={Chips.colors.GRASS_GREEN} />`
+e.g.
+
+```jsx
+<Chips label="GRASS_GREEN" color={Chips.colors.GRASS_GREEN} />
+```
 
 <Canvas>
   <Story name="Chips palette">
@@ -146,6 +150,55 @@ e.g. `<Chips label="GRASS_GREEN" color={Chips.colors.GRASS_GREEN} />`
           </Flex>
         );
       })}
+    </Flex>
+  </Story>
+</Canvas>
+
+### Chips on colored backgrounds
+
+When a chip appears on a background color identical to its color, use `showBorder` prop in order to add a distinctive white border.
+<Canvas>
+  <Story name="On color">
+    <Flex style={{ width: "100%" }} align={Flex.align.STRETCH} justify={Flex.justify.CENTER}>
+      <Flex
+        align={Flex.align.CENTER}
+        justify={Flex.justify.CENTER}
+        style={{
+          background: "var(--primary-selected-color)",
+          width: "124px",
+          height: "64px",
+          margin: "var(--spacing-small)",
+          borderRadius: "var(--border-radius-small)"
+        }}
+      >
+        <Chips label="On selected" showBorder readOnly/>
+      </Flex>
+      <Flex
+        align={Flex.align.CENTER}
+        justify={Flex.justify.CENTER}
+        style={{
+          background: "var(--positive-color-selected)",
+          width: "124px",
+          height: "64px",
+          margin: "var(--spacing-small)",
+          borderRadius: "var(--border-radius-small)"
+        }}
+      >
+        <Chips label="On positive" showBorder color={Chips.colors.POSITIVE} readOnly />
+      </Flex>
+      <Flex
+        align={Flex.align.CENTER}
+        justify={Flex.justify.CENTER}
+        style={{
+          background: "var(--negative-color-selected)",
+          width: "124px",
+          height: "64px",
+          margin: "var(--spacing-small)",
+          borderRadius: "var(--border-radius-small)"
+        }}
+      >
+        <Chips label="On negative" showBorder color={Chips.colors.NEGATIVE} readOnly />
+      </Flex>
     </Flex>
   </Story>
 </Canvas>
