TS-migration: Combobox

--- a/src/components/Search/__stories__/Search.stories.mdx
+++ b/src/components/Search/__stories__/Search.stories.mdx
@@ -2,8 +2,8 @@ import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Search from "../Search";
 import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
+import Combobox from "../../Combobox/Combobox";
 import { Link, RelatedComponents, Tip, UsageGuidelines } from "../../../storybook/components";
-import Combobox from "../../Combobox/Combobox.jsx";
 import {
   COMBOBOX,
   DROPDOWN,
