--- a/src/components/MenuButton/__stories__/MenuButton.stories.mdx
+++ b/src/components/MenuButton/__stories__/MenuButton.stories.mdx
@@ -13,7 +13,8 @@ import MoveArrowDown from "../../Icon/Icons/components/MoveArrowDown";
 
 export const metaSettings = createStoryMetaSettings({
   component: MenuButton,
-  iconPropNamesArray: ["component"]
+  iconPropNamesArray: ["component"],
+    actionPropsArray: ["onMenuHide", "onMenuShow"]
 });
 
 <Meta
