refactor: ColorPicker TS Migration (#1208)
* chore: migrate ColorPickerItemComponent and ColorPickerClearButton

* chore: migrate more parts

* chore: minor

* chore: minor

* chore: ColorPickerItemComponent as VibeComponent

* chore: minor type issue

* chore: migrate ColorPickerContentComponent

* chore: minor renaming

* chore: use the correct size types

* refactor: minor

* chore: migrate ColorPicker

* chore: migrated

* chore: update migration guide

* chore: minor

* chore: tmemp fix to make the story work again

* chore: minor doc

* chore: fix story and move default values

* chore: default props removal

* chore: hackScript for color value string type

* chore: minor

* chore: use types correctly in color-utils

* refactor: extract common types

* chore: change icons type

* refactor: extract common types

* chore: minor

* chore: comment

* refactor: use ColorStyle enum

* refactor: use ColorShapes enum

* refactor: rename

* chore: added the accidently dropped ColorPickerContent static items

* refactor: use BaseSizes enum

* chore: minor

--- a/src/components/ColorPicker/__stories__/ColorPicker.stories.mdx
+++ b/src/components/ColorPicker/__stories__/ColorPicker.stories.mdx
@@ -45,7 +45,7 @@ ColorPicker is our component for selecting our content colors
 
 ## Props
 
-<ArgsTable of={ColorPicker} />
+<ArgsTable story="Overview"/>
 
 ## Variants
 
