--- a/src/components/Link/__stories__/Link.stories.mdx
+++ b/src/components/Link/__stories__/Link.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import Link from "../Link.tsx";
 import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
-import { ExternalPage, Gallery } from "../../Icon/Icons";
+import { ExternalPage, Gallery, Info, Link as IconLink } from "../../Icon/Icons";
 import { BUTTON, CHIP, BREADCRUBMS } from "../../../storybook/components/related-components/component-description-map";
 import { Link as StorybookLink } from "../../../storybook";
 import "./Link.stories.scss";
@@ -77,8 +77,8 @@ Link is an actionable text component with connection to another web pages.
 
 <Canvas>
   <Story name="Right to left">
-    <Link text="اقرأ أكثر" href="https://www.monday.com" icon="fa fa-link" />
-    <Link text="קרא עוד" href="https://www.monday.com" iconPosition={Link.iconPositions.END} icon="fa fa-info" />
+    <Link text="اقرأ أكثر" href="https://www.monday.com" icon={IconLink} />
+    <Link text="קרא עוד" href="https://www.monday.com" iconPosition={Link.iconPositions.END} icon={Info} />
   </Story>
 </Canvas>
 
