--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -196,6 +196,45 @@ Use modal for short and non-frequent tasks. For common tasks consider using the 
       );
     }}
   </Story>
+  <Story name="Width variants - custom">
+    {() => {
+      // Boilerplate for creating a modal, not relevant for this example
+      const [show, setShow] = useState(false);
+      const openModalButtonRef = useRef(null);
+      const closeModal = useCallback(() => {
+        setShow(false);
+      }, []);
+      const openModalButton = // Internal helper, not part of the API
+        useHelperOpenModalButton({ title: "Custom size (i.e. 720px)", setShow, openModalButtonRef });
+      return (
+        // Modal with full width variant
+        <>
+          {openModalButton}
+          <Modal
+            id="story-book-modal"
+            title="Modal title"
+            triggerElement={openModalButtonRef.current}
+            show={show}
+            onClose={closeModal}
+            // Width prop effects on the modal width
+            width={"720px"}
+          >
+            <ModalContent>
+              <p className="modal-content">Modal content goes here</p>
+            </ModalContent>
+            <ModalFooter>
+              <Flex justify={Flex.justify.END} gap={12}>
+                <Button onClick={closeModal} kind={Button.kinds.TERTIARY}>
+                  Cancel
+                </Button>
+                <Button onClick={closeModal}>Confirm</Button>
+              </Flex>
+            </ModalFooter>
+          </Modal>
+        </>
+      );
+    }}
+  </Story>
 </Canvas>
 
 ### Modal header with an icon
