chore: quick fix on docs to show absolute url for the first example

--- a/src/components/Avatar/__stories__/avatar.stories.mdx
+++ b/src/components/Avatar/__stories__/avatar.stories.mdx
@@ -61,7 +61,7 @@ Avatar is a graphical representation of a person through a profile picture, imag
     name="Overview"
     args={{
       size: Avatar.sizes.LARGE,
-      src: person1,
+      src: window.location.origin + '/' + person1,
       type: Avatar.types.IMG,
       ariaLabel: "Hadas Fahri"
     }}
