--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -263,9 +263,9 @@ We can choose what will be the related element's trigger which will be responsib
   <Story name="Show triggers">
     {() => {
       // For maintain active state of each button according to the dialog open state (this hooks is available for your usage)
-      const { checked: clickButtonActive, onChange: onClickClickButton } = useSwitch({ defaultChecked: false });
-      const { checked: hoverButtonActive, onChange: onHoverButton } = useSwitch({ defaultChecked: false });
-      const { checked: focusButtonActive, onChange: onFocusButton } = useSwitch({ defaultChecked: false });
+      const { isChecked: clickButtonActive, onChange: onClickClickButton } = useSwitch({ defaultChecked: false });
+      const { isChecked: hoverButtonActive, onChange: onHoverButton } = useSwitch({ defaultChecked: false });
+      const { isChecked: focusButtonActive, onChange: onFocusButton } = useSwitch({ defaultChecked: false });
       const modifiers =
         // for prevent dialog to move while scrolling
         [
@@ -282,8 +282,6 @@ We can choose what will be the related element's trigger which will be responsib
             modifiers={modifiers}
             showTrigger={[Dialog.hideShowTriggers.CLICK]}
             hideTrigger={[Dialog.hideShowTriggers.CLICK]}
-            showTrigger={[]}
-            hideTrigger={[]}
             content={
               <DialogContentContainer>
                 <ExampleContent />
