--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -310,8 +310,8 @@ We can choose what will be the related element's trigger which will be responsib
           </Dialog>
           <Dialog
             modifiers={modifiers}
-            showTrigger={[]}
-            hideTrigger={[]}
+            showTrigger={[Dialog.hideShowTriggers.FOCUS]}
+            hideTrigger={[Dialog.hideShowTriggers.BLUR]}
             content={
               <DialogContentContainer>
                 <ExampleContent />
