remove not needed hook

--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -10,7 +10,7 @@ import {
   TOOLTIP
 } from "../../../storybook/components/related-components/component-description-map";
 import Flex from "../../Flex/Flex";
-import { useSwitch } from "../../Switch/hooks/useSwitch";
+import useSwitch from "../../../hooks/useSwitch";
 import "./Dialog.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
